[project]
name = "poetry-project-v1"
version = "0.1.0"
description = "Homework: pytest + selene + pylint (dev)"
authors = [
    {name = "Nataly Kostiuchenko",email = "natcheshirecats@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "selene (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)"
]
[tool.poetry]
package-mode = false